--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,12 +13,12 @@
   <div class="board noselect">
   </div>
   <div class="menu">
-    <button>Король</button>
-    <button>Конь</button>
-    <button>Огонь</button>
+    <button id="king">Король</button>
+    <button id="horse">Конь</button>
+    <button id="fire">Огонь</button>
     <button id="getSolve">Найти решение</button>
-    <button>Шаг вперед</button>
-    <button>Шаг назад</button>
+    <button id="nextStep">Шаг вперед</button>
+    <button id="backStep">Шаг назад</button>
   </div>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
