add real start position refactoring add display with exception trace

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,8 @@
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
   </div>
+  <div class="state">
+  </div>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
