--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,8 @@
     <button id="king">Король</button>
     <button id="horse">Конь</button>
     <button id="fire">Огонь</button>
-    <button id="getSolve">Найти решение</button>
+    <button id="getSolveStack">Найти решение (стек)</button>
+    <button id="getSolveQueue">Найти решение (очередь)</button>
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
   </div>
