add max depth constraint

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,11 @@
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
   </div>
+  <div class="params">
+    <div class="param">
+      <input id="maxDepth" type="text" placeholder="Max depth" value="10">
+    </div>
+  </div>
   <div class="state">
   </div>
   <script type="text/javascript" src="js/main.js"></script>
