--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-  <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
   <div class="board noselect">
@@ -20,6 +16,11 @@
     <button id="getSolveQueue">Найти решение (очередь)</button>
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
+  </div>
+  <div class="params">
+    <div class="param">
+      <input id="maxDepth" type="text" placeholder="Max depth" value="10">
+    </div>
   </div>
   <div class="state">
   </div>
