--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
     <button id="fire">Огонь</button>
     <button id="getSolveStack">Найти решение (стек)</button>
     <button id="getSolveQueue">Найти решение (очередь)</button>
+    <button id="getHeuristicQueue">Найти решение (эвристика)</button>
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
   </div>
