--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,13 +14,14 @@
     <button id="fire">Огонь</button>
     <button id="getSolveStack">Найти решение (стек)</button>
     <button id="getSolveQueue">Найти решение (очередь)</button>
-    <button id="getHeuristicQueue">Найти решение (эвристика)</button>
+    <button id="getHeuristicQueue">Найти решение (эвристика манхеттен)</button>
+    <button id="getHeuristicQueue3">Найти решение (эвристика конь)</button>
     <button id="nextStep">Шаг вперед</button>
     <button id="backStep">Шаг назад</button>
   </div>
   <div class="params">
     <div class="param">
-      <input id="maxDepth" type="text" placeholder="Max depth" value="10">
+      <input id="maxDepth" type="text" placeholder="Max depth" value="25">
     </div>
   </div>
   <div class="state">
